# Demand-Forecast-API-LightGBM-

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: download_data.py
src/demand_forecast/api/: __init__.py  main.py
src/demand_forecast/api/routes/: predict.py
src/demand_forecast/core/: __init__.py  config.py  model.py
src/demand_forecast/ml/: __init__.py  features.py  train.py
src/demand_forecast/schemas/: forecast.py
tests/: test_health.py
